test/functions/deitz/default/test_default3-error.good
Error: Ambiguous call 'foo()' (test_default3-error.chpl:17)
Candidates are:
  foo(i: int, j: float, k: string)
  foo(i: float, j: string, k: int)
